# mcp-docsearch

./: LICENSE  README.md  pyproject.toml
src/docsearch/: __init__.py  __main__.py  server.py
